--- a/css/oc-icons.css
+++ b/css/oc-icons.css
@@ -51,6 +51,7 @@
 .dIcon-Mail  { background-image: url("../images/oc-img/l-mail.png"  ); }
 .dIcon-Disc  { background-image: url("../images/oc-img/l-discor.png"); }
 .dIcon-Know  { background-image: url("../images/oc-img/l-know.png"  ); }
+.dIcon-Meme	 { background-image: url("../images/oc-img/l-meme.png"  ); }
 
 .dIcon-CFold { background-image: url("../images/oc-img/l-folder.png"); }
 .dIcon-OFold { background-image: url("../images/oc-img/l-fopen.png" ); }
